# m0o-pico-fw

./: .gitmodules  CMakeLists.txt  bno055.c  bno055.h  boom.c  boom.h  camera.c  camera.h  camera.pio  camera_task.c  camera_task.h  chassis.c  chassis.h  comm.c  comm.h  controller.c  controller.h  heading_task.c  heading_task.h  host.c  host.h  i2c_bus.c  i2c_bus.h  input.c  input.h  kinematics.c  kinematics.h  kinematics.py  log.c  log.h  main.c  ov7670.c  ov7670.h  platform.c  platform.h  scheduler.c  scheduler.h  util.c  util.h  vl53l0x.c  (+1 more)
ioexpander/: CMakeLists.txt  ioexpander.c
plan/: apples.c  apples.h  direction.c  direction.h  plan_boom.c  plan_boom.h  plan_chassis.c  plan_chassis.h  planner.h  servo.c  servo.h  sheep.c  sheep.h  spin.c  trough.c  trough.h
platform/: bno055.c  boom.c  boom.h  chassis.c  chassis.h  i2c_bus.c  kinematics.h  platform.c  platform_camera.c  platform_camera.h  platform_vl53l0x.c  platform_vl53l0x.h  vl53l0x.h
platform/include/platform/: platform.h
platform/ioexpander/: ioexpander.c  ioexpander.h
